# letter_recongition

./: CMakeLists.txt  main.cpp  Лабораторная работа1 (1).doc
